# rust-lambda-api

./: .gitignore  README.md
lambda-api/: Cargo.toml  README.md
lambda-api/src/: main.rs
lambda-api/src/api/: errors.rs  hello.rs  mod.rs
terraform/: main.tf
